@@ -231,6 +231,22 @@ SCIP_VAR* SCIPgetSlackVarIndicator(
    SCIP_CONS*            cons                /**< indicator constraint */
    );
 
+/** sets upper bound for slack variable corresponding to indicator constraint
+ *
+ *  Use with care if you know that the maximal violation of the corresponding constraint is at most @p ub. This bound
+ *  might be improved automatically during the solution process.
+ *
+ *  @pre This method should only be called if SCIP is in one of the following stages:
+ *       - \ref SCIP_STAGE_INIT
+ *       - \ref SCIP_STAGE_PROBLEM
+ */
+EXTERN
+SCIP_RETCODE SCIPsetSlackVarUb(
+   SCIP*                 scip,                /**< SCIP data structure */
+   SCIP_CONS*            cons,                /**< indicator constraint */
+   SCIP_Real             ub                   /**< upper bound for slack variable */
+   );
+
 /** checks whether indicator constraint is violated w.r.t. sol */
 EXTERN
 SCIP_Bool SCIPisViolatedIndicator(
